2010-01-01  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_get_color): Fix buffer overflow (Bug#4763).

	* lread.c (syms_of_lread): Make it clearer that these are the
	names of loaded files (Bug#5068).

	* eval.c (run_hook_with_args): Handle the case where the global
	value has the obsolete single-function form (Bug#5026).

2009-12-27  Chong Yidong  <cyd@stupidchicken.com>

	* minibuf.c (Fall_completions): Minor optimization.

2009-12-26  Eli Zaretskii  <eliz@gnu.org>

	* .gdbinit (pgx): Fix display of composite glyphs.
	Display cmp.from and cmp.to as well.
	(pitx): Fix last change.

2009-12-25  Kenichi Handa  <handa@m17n.org>

	* composite.h (composition_adjust_point): Update prototype.

	* composite.c (composition_reseat_it): Don't make a composition
	spanning over point.
	(CHAR_COMPOSABLE_P): Treat U+200C (ZWNJ) and U+200D (ZWJ) as
	composable characters.
	(composition_adjust_point): New arg NEW_PT.  Callers changed.

	* keyboard.c (command_loop_1): Force redisplay if the last point
	was within a composition.
	(adjust_point_for_property): Don't adjust point for automatic
	composition when called after buffer modification.

2009-12-19  Eli Zaretskii  <eliz@gnu.org>

	* .gdbinit (pitx): Don't use enum names, use their values.
	Remove reference to non-existing value GET_FROM_COMPOSITION.
	(pgx): Don't use enum names, use their values.
	(pitmethod): New helper command.
	(pitx): Use it to display iteration method.
	(pgrowit): New command.

	* makefile.w32-in ($(BLD)/cmds.$(O)): Depend on frame.h.

	Update dependencies in Makefile.in.

	* Makefile.in (alloc.o): Depend on termhooks.h.
	(atimer.o): Depend on blockinput.h.
	(buffer.o): Depend on indent.h, keyboard.h, coding.h, keymap.h,
	and frame.h.
	(callint.o): Depend on systime.h, coding.h, and composite.h.
	(callproc.o): Depend on buffer.h.
	(casefiddle.o): Don't depend on charset.h.
	(casetab.o): Depend on character.h.
	(ccl.o): Depend on composite.h.
	(chartab.o): Depend on ccl.h.